# pydantic-ai-shields

./: CHANGELOG.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: getting-help.md  index.md  installation.md
docs/advanced/: async-guardrails.md  cost-tracking.md
docs/api/: exceptions.md  index.md
docs/concepts/: index.md
src/pydantic_ai_shields/: __init__.py  guardrails.py
tests/: test_guardrails.py  test_shields.py
